--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="/main.js" defer></script>
 </head>
 <body>
-  <p><span id="window-inner-width"></span>px x <span id="window-inner-height"></span>px</p>
+  <p>WIND: <span id="window-inner-width"></span>px x <span id="window-inner-height"></span>px</p>
+  <p>HTML: <span id="html-client-width"></span>px x <span id="html-client-height"></span>px</p>
 </body>
 </html>
