--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
   <p>WIND: <span id="window-inner-width"></span>px x <span id="window-inner-height"></span>px</p>
   <p>HTML: <span id="html-client-width"></span>px x <span id="html-client-height"></span>px</p>
+  <p>BODY: <span id="body-client-width"></span>px x <span id="body-client-height"></span>px</p>
 </body>
 </html>
